--- a/index.html
+++ b/index.html
@@ -3,20 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chatbot</title>
+    <title>Chatbot</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 40px; }
-        #chatbox { width: 50%; height: 400px; border: 1px solid #ccc; overflow-y: scroll; margin: auto; padding: 10px; }
-        input { width: 60%; padding: 10px; }
+        body { font-family: Arial, sans-serif; text-align: center; }
+        #chat-container { width: 50%; margin: auto; border: 1px solid #ccc; padding: 10px; border-radius: 5px; }
+        #messages { height: 300px; overflow-y: auto; border-bottom: 1px solid #ccc; padding-bottom: 10px; }
+        input { width: 80%; padding: 10px; }
         button { padding: 10px; }
-        .user-message { text-align: right; color: blue; }
-        .bot-message { text-align: left; color: green; }
     </style>
 </head>
 <body>
     <h2>Chatbot</h2>
-    <div id="chatbox"></div>
-    <input type="text" id="userInput" placeholder="Type a message..." />
-    <button onclick="sendMessage()">Send</button>
+    <div id="chat-container">
+        <div id="messages"></div>
+        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
+        <button onclick="sendMessage()">Send</button>
+    </div>
 
     <script>
+        const API_URL = "https://chatbot-651998033309.asia-south1.run.app/chat"; // Replace with your Cloud Run URL
+
+        function sendMessage() {
+            const userInput = document.getElementById("user-input").value;
+            if (!userInput) return;
+
+            document.getElementById("messages").innerHTML += `<p><strong>You:</strong> ${userInput}</p>`;
+
+            fetch(API_URL, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ message: userInput })
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("messages").innerHTML += `<p><strong>Bot:</strong> ${data.response}</p>`;
+                document.getElementById("user-input").value = "";
+            })
+            .catch(error => {
+                console.error("Error:", error);
+                document.getElementById("messages").innerHTML += `<p><strong>Bot:</strong> Error connecting to chatbot.</p>`;
+            });
+        }
+
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+            }
+        }
+    </script>
+</body>
+</html>
+
