--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <script>
-        const API_URL = "https://chatbot-651998033309.asia-south1.run.app/chat"; // Replace with your Cloud Run URL
+        const API_URL = "https://chatbot-u2hfsb6yrq-el.a.run.app/chat"; // Replace with your Cloud Run URL
 
         function sendMessage() {
             const userInput = document.getElementById("user-input").value;
