--- a/index.html
+++ b/index.html
@@ -5,44 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        #chat-container { width: 50%; margin: auto; border: 1px solid #ccc; padding: 10px; border-radius: 5px; }
-        #messages { height: 300px; overflow-y: auto; border-bottom: 1px solid #ccc; padding-bottom: 10px; }
-        input { width: 80%; padding: 10px; }
-        button { padding: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .chat-container {
+            width: 400px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .chatbox {
+            height: 300px;
+            overflow-y: auto;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+        }
+        .input-container {
+            display: flex;
+        }
+        input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
-    <h2>Chatbot</h2>
-    <div id="chat-container">
-        <div id="messages"></div>
-        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-        <button onclick="sendMessage()">Send</button>
+
+    <div class="chat-container">
+        <h2>Chatbot</h2>
+        <div id="chatbox" class="chatbox"></div>
+        <div class="input-container">
+            <input type="text" id="userInput" placeholder="Type your message..." onkeypress="handleKeyPress(event)">
+            <button onclick="sendMessage()">Send</button>
+        </div>
     </div>
 
     <script>
-        const API_URL = "https://chatbot-u2hfsb6yrq-el.a.run.app/chat"; // Replace with your Cloud Run URL
+        const CHATBOT_URL = "https://chatbot-u2hfsb6yrq-el.a.run.app/chat";  // ✅ Your Cloud Run chatbot URL
 
-        function sendMessage() {
-            const userInput = document.getElementById("user-input").value;
+        async function sendMessage() {
+            const userInput = document.getElementById("userInput").value.trim();
             if (!userInput) return;
 
-            document.getElementById("messages").innerHTML += `<p><strong>You:</strong> ${userInput}</p>`;
+            // Display user message
+            const chatbox = document.getElementById("chatbox");
+            chatbox.innerHTML += `<p><b>You:</b> ${userInput}</p>`;
 
-            fetch(API_URL, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ message: userInput })
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById("messages").innerHTML += `<p><strong>Bot:</strong> ${data.response}</p>`;
-                document.getElementById("user-input").value = "";
-            })
-            .catch(error => {
-                console.error("Error:", error);
-                document.getElementById("messages").innerHTML += `<p><strong>Bot:</strong> Error connecting to chatbot.</p>`;
-            });
+            try {
+                const response = await fetch(CHATBOT_URL, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ message: userInput })
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+
+                const data = await response.json();
+
+                // Display chatbot response
+                chatbox.innerHTML += `<p><b>Bot:</b> ${data.response}</p>`;
+                chatbox.scrollTop = chatbox.scrollHeight;
+            } catch (error) {
+                chatbox.innerHTML += `<p style="color:red;"><b>Error:</b> Unable to connect to chatbot.</p>`;
+                console.error("Chatbot connection error:", error);
+            }
+
+            // Clear input
+            document.getElementById("userInput").value = "";
         }
 
         function handleKeyPress(event) {
@@ -51,6 +102,6 @@
             }
         }
     </script>
+
 </body>
 </html>
-
