--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <script>
-        const CHATBOT_URL = "https://chatbot-u2hfsb6yrq-el.a.run.app/chat";  // ✅ Your Cloud Run chatbot URL
+        const CHATBOT_URL = "https://chatbot-651998033309.asia-south1.run.app/chat";  // ✅ Your Cloud Run chatbot URL
 
         async function sendMessage() {
             const userInput = document.getElementById("userInput").value.trim();
